# matrix

./: CMakeLists.txt  main.cpp
decision_CLY/: CMakeLists.txt  gause.cpp  head.h
function_matrix/: CMakeLists.txt  generation_matrix.cpp  header.h  print_matrix.cpp
